Kubernetes/10ingress/app2/manifest.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app2
  labels: #These labels are deployment set labels.Every k8s resources have labels
    app: app2
spec:
  # modify replicas according to your case
  replicas: 2
  selector: #selector should match with template. The selector should match with pod labels
    matchLabels:
      app: app2
  template: #Template is pod labels   
    metadata:
      labels:
        app: app2
    spec:
      containers: 
      - name: app2
        image: cryl91/app2
        ports: 
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: app2
spec:
  selector:
    app: app2
  ports:
  - name: name-of-service-port
    protocol: TCP
    port: 80 #This port number belongs to service
    targetPort: 80 #This port number belongs to container
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: app2
    annotations:
        alb.ingress.kubernetes.io/scheme: internet-facing
        alb.ingress.kubernetes.io/target-type: ip
        alb.ingress.kubernetes.io/tags: Environment=dev,Project=roboshop
        alb.ingress.kubernetes.io/group.name: joindevops
spec:
  ingressClassName: alb
  rules:
  - host: "app2.joindevops.online"
    http:
      paths:
      - path: /  #path: / means: Match any request that starts with /, like: http://app2.joindevops.online/ or http://app2.joindevops.online/index.html
        pathType: Prefix
        backend:
          service:
            name: app2
            port:
              number: 80
